# DataStructureAlgorithms

./: README.md
AlgorithmicToolbox/: CMakeLists.txt
AlgorithmicToolbox/Assignment1/fibonacci/: fib.cc
AlgorithmicToolbox/Assignment1/fibonacci_huge/: CMakeLists.txt  fibonacci_huge.cpp
AlgorithmicToolbox/Assignment1/fibonacci_last_digit/: CMakeLists.txt  fibonacci_last_digit.cpp
AlgorithmicToolbox/Assignment1/gcd/: CMakeLists.txt  gcd.cpp
AlgorithmicToolbox/Assignment1/lcm/: CMakeLists.txt  lcm.cpp
AlgorithmicToolbox/Assignment2/change/: CMakeLists.txt
AlgorithmicToolbox/Assignment2/covering_segments/: CMakeLists.txt
AlgorithmicToolbox/Assignment2/different_summands/: CMakeLists.txt
AlgorithmicToolbox/Assignment2/dot_product/: CMakeLists.txt
AlgorithmicToolbox/Assignment2/fractional_knapsack/: CMakeLists.txt
AlgorithmicToolbox/Assignment3/inversions/: CMakeLists.txt
AlgorithmicToolbox/Assignment3/majority_element/: CMakeLists.txt
AlgorithmicToolbox/Assignment3/points_and_segments/: CMakeLists.txt
AlgorithmicToolbox/Assignment4/placing_parentheses/: CMakeLists.txt
AlgorithmsOnGraphs/: CMakeLists.txt
AlgorithmsOnGraphs/acyclicity/: CMakeLists.txt  acyclicity.cpp
AlgorithmsOnGraphs/bfs/: CMakeLists.txt  bfs.cpp
AlgorithmsOnGraphs/bipartite/: CMakeLists.txt  bipartite.cpp
AlgorithmsOnGraphs/clustering/: CMakeLists.txt
AlgorithmsOnGraphs/connected_components/: CMakeLists.txt  connected_components.cpp
AlgorithmsOnGraphs/connecting_points/: CMakeLists.txt  connecting_points.cpp
AlgorithmsOnGraphs/dijkstra/: CMakeLists.txt  dijkstra.cpp
AlgorithmsOnGraphs/negative_cycle/: CMakeLists.txt  negative_cycle.cpp
AlgorithmsOnGraphs/reachability/: CMakeLists.txt  reachability.cpp
AlgorithmsOnGraphs/shortest_paths/: CMakeLists.txt  shortest_paths.cpp
AlgorithmsOnGraphs/strongly_connected/: CMakeLists.txt
AlgorithmsOnGraphs/toposort/: CMakeLists.txt  toposort.cpp
DataStructures/: CMakeLists.txt
DataStructures/Starters PA1/check_brackets_in_code/: CMakeLists.txt  check_brackets.cpp  check_brackets.java  check_brackets.py
DataStructures/Starters PA1/network_packet_processing_simulation/: CMakeLists.txt  process_packages.cpp  process_packages.py
DataStructures/Starters PA1/tree_height/: CMakeLists.txt  tree-height.cpp  tree-height.py
DataStructures/Starters PA2/job_queue/: CMakeLists.txt  job_queue.cpp
DataStructures/Starters PA2/make_heap/: CMakeLists.txt  build_heap.cpp
DataStructures/Starters PA2/merging_tables/: CMakeLists.txt  merging_tables.cpp
DataStructures/Starters PA3/hash_chains/: CMakeLists.txt  hash_chains.cpp
DataStructures/Starters PA3/hash_substring/: CMakeLists.txt  hash_substring.cpp
DataStructures/Starters PA3/phone_book/: CMakeLists.txt  phone_book.cpp
DataStructures/Starters PA4/rope/: CMakeLists.txt
StringAlgorithms/: CMakeLists.txt
StringAlgorithms/bwmatching/: CMakeLists.txt
StringAlgorithms/bwt/: CMakeLists.txt
StringAlgorithms/bwtinverse/: CMakeLists.txt
StringAlgorithms/kmp/: CMakeLists.txt
StringAlgorithms/non_shared_substring/: CMakeLists.txt
StringAlgorithms/suffix_array/: CMakeLists.txt
StringAlgorithms/suffix_array_long/: CMakeLists.txt
StringAlgorithms/suffix_array_matching/: CMakeLists.txt
StringAlgorithms/suffix_tree/: CMakeLists.txt
StringAlgorithms/suffix_tree_from_array/: CMakeLists.txt
StringAlgorithms/trie/: CMakeLists.txt  trie.py
StringAlgorithms/trie_matching/: CMakeLists.txt  trie_matching.cpp  trie_matching.py
StringAlgorithms/trie_matching_extended/: CMakeLists.txt  trie_matching_extended.cpp  trie_matching_extended.py
(+4 files in other folders)
